--- a/Register.html
+++ b/Register.html
@@ -16,7 +16,7 @@
             <input id="registerEmail" type="text" placeholder="Enter email">
             <input id="registerPassword" type="password" placeholder="Enter Password">
             <input type="password" placeholder="Confirm Password">
-            <button onclick="window.location.href='Login.html'">Login</button>
+            <button onclick="window.location.href='index.html'">Login</button>
             <button onclick="register()">Register</button>
         </div>
     </div>
